src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_With_Markup__c</fullName>
	    <formula>IF(
			AND(
			$Setup.Configurations__c.Is_Exchange_Rate_Markup_Enable__c,
			NOT(ISNULL(Conversion_Rate__c))
			),
			($Setup.Configurations__c.Exchange_Rate_Markup__c + Conversion_Rate__c ),
			Conversion_Rate__c
		)</formula>
	    <label>Conversion Rate With Markup</label>
	    <precision>18</precision>
	    <scale>6</scale>
	    <type>Number</type>
    </fields>
    <fields>
        <fullName>Backward_Conversion_Rate__c</fullName>
        <description>Backward conversion rate</description>
        <formula>if((ISNULL(Conversion_Rate_With_Markup__c) || Conversion_Rate_With_Markup__c = 0),1,1/Conversion_Rate_With_Markup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Backward conversion rate</inlineHelpText>
        <label>Backward Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Name__c</fullName>
        <label>Currency Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Symbol__c</fullName>
        <label>Currency Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Formatted_FX_Currency_Code__c</fullName>
	    <formula>if(OR(ISBLANK(Currency_Code__c),ISBLANK(Name__c),ISBLANK(Currency_Name__c)), &apos;&apos;, Currency_Code__c + &apos; - &apos; + Name__c + &apos; &apos; + Currency_Name__c)</formula>
	    <label>Formatted FX Currency Code</label>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flag_Encoded__c</fullName>
        <label>Flag (Encoded)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Default__c</columns>
        <columns>Visible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>